# rtosmap

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/01-basic/: SCENARIO.md  tasks.map
demos/02-zephyr-thread-analyzer/: SCENARIO.md  threads.map
demos/03-esp32-wifi-ble-coex/: SCENARIO.md  tasks.map
demos/04-clean-baseline-ci/: SCENARIO.md  tasks.map
demos/05-safety-critical-tight/: SCENARIO.md  tasks.map
demos/06-stdin-pipeline/: SCENARIO.md  threadx.map
demos/07-sarif-code-scanning/: SCENARIO.md  tasks.map
demos/08-json-triage-jq/: SCENARIO.md  tasks.map
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: help.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
rtosmap/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_demos.py  test_sarif.py  test_smoke.py
